singleton implemented with @PostConstruct and @Value

--- a/src/main/resources/templates/errorPage.html
+++ b/src/main/resources/templates/errorPage.html
@@ -2,9 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Herolist</title>
+    <title>Title</title>
 </head>
 <body>
-superhelte vises her
+<h1>An Error Occured!</h1>
+<p><span th:text="${message}"></span></p>
 </body>
 </html>
