--- a/src/main/resources/templates/errorPage.html
+++ b/src/main/resources/templates/errorPage.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>An Error Occured!</h1>
+<h1>An Error Occured in the Backend System!</h1>
 <p><span th:text="${message}"></span></p>
 </body>
 </html>
