create 3 heroes at same time

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -4,6 +4,6 @@
     <title>Title</title>
 </head>
 <body>
-<h1>An Error Occured 404 - redirect!</h1>
+<h1>An Error Occurred 404 - redirect!</h1>
 </body>
 </html>
