--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<h1>An Error Occured on the Server (500) </h1>
+<h1>An Error Occurred on the Server (500) </h1>
 </body>
 </html>
