--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -17,6 +17,9 @@
     </tr>
     </thead>
     <tbody>
+    <tr th:if="${result.isEmpty()}">
+        <td colspan="2"> No Superheroes available </td>
+    </tr>
     <tr th:each="hero : ${result}">
         <td th:text="${hero.heroId}"/>
         <td th:text="${hero.heroName}"/>
